--- a/styles.css
+++ b/styles.css
@@ -24,13 +24,13 @@ body {
     margin-bottom: 40px;
 }
 
-.profile-pic {
+/*.profile-pic {
     width: 250px;
     height: 250px;
     border-radius: 50%;
     border: 3px solid #333;
     margin-bottom: 20px;
-}
+}*/
 
 .title {
     font-size: 2.5rem;
